# serializer version: 1
# name: TestRegressionOutputs.test_rf_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.670784 |   0.053594 |  -0.117928 |    0.139035 |    -0.023417 |  -0.270039 |  -0.44211  |   -0.186147 |
      |  2 |            2 | 2.20594 | -0.544962 |  -0.004542 |  -0.419568 |   -0.196432 |     0.027108 |   0.181133 |  -0.225561 |   -0.046283 |
      |  3 |            3 | 2.20594 |  0.293443 |   0.585458 |  -0.060117 |   -0.194981 |     0.068514 |   0.839855 |   0.141759 |    0.273238 |
      |  4 |            4 | 2.20594 |  0.343831 |  -0.069743 |   0.035049 |    0.120263 |    -0.171457 |  -0.116286 |   0.138258 |    0.197407 |
      |  5 |            5 | 2.20594 | -0.36705  |  -0.102798 |  -0.097714 |    0.160553 |     0.133257 |   0.004032 |   0.046089 |    0.357772 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013548 |   0.011591 |   0.011761 |    0.01268  |     0.010949 |   0.009915 |   0.0104   |    0.009045 |
      |  2 |            2 |      0 | 0.020811 |   0.025234 |   0.022839 |    0.020817 |     0.02336  |   0.018689 |   0.021683 |    0.023111 |
      |  3 |            3 |      0 | 0.016483 |   0.017445 |   0.016352 |    0.016742 |     0.014011 |   0.017054 |   0.017876 |    0.01534  |
      |  4 |            4 |      0 | 0.009327 |   0.008607 |   0.008009 |    0.00824  |     0.00843  |   0.008782 |   0.009958 |    0.007449 |
      |  5 |            5 |      0 | 0.019297 |   0.019047 |   0.021022 |    0.01745  |     0.019957 |   0.015976 |   0.020692 |    0.017768 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |         A |         B |         C |
      |---:|-------------:|--------:|----------:|----------:|----------:|
      |  1 |            1 | 2.20594 | -0.594482 | -0.231199 | -0.692116 |
      |  2 |            2 | 2.20594 | -1.25693  | -0.218553 |  0.246372 |
      |  3 |            3 | 2.20594 |  0.957096 |  0.539514 |  0.450559 |
      |  4 |            4 | 2.20594 |  0.212993 | -0.002629 |  0.266958 |
      |  5 |            5 | 2.20594 | -0.477268 |  0.007353 |  0.604058 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.23375  |  -0.059731 |   0.041117 |    0.009426 |    -0.019265 |  -0.13167  |  -0.093653 |   -0.030274 |
      |  2 |            2 | 2.20594 | -0.860562 |  -0.055512 |  -0.124966 |   -0.020752 |    -0.021058 |  -0.040834 |  -0.087057 |   -0.018367 |
      |  3 |            3 | 2.20594 |  0.081687 |   0.639952 |   0.146611 |   -0.005336 |     0.020234 |   0.936151 |   0.007015 |    0.120855 |
      |  4 |            4 | 2.20594 |  0.713789 |  -0.111394 |  -0.077309 |    0.031956 |     0.005166 |  -0.157705 |   0.069768 |    0.003051 |
      |  5 |            5 | 2.20594 |  0.111248 |  -0.06596  |  -0.035085 |    0.026804 |     0.027163 |   0.077796 |  -0.025934 |    0.018109 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.001512 |   0.00177  |   0.001245 |    0.001445 |     0.001463 |   0.00182  |   0.001903 |    0.001396 |
      |  2 |            2 |      0 | 0.001474 |   0.001732 |   0.002034 |    0.003146 |     0.001905 |   0.002353 |   0.005197 |    0.002644 |
      |  3 |            3 |      0 | 0.004786 |   0.007392 |   0.007026 |    0.007507 |     0.006745 |   0.011104 |   0.010781 |    0.010283 |
      |  4 |            4 |      0 | 0.002512 |   0.003407 |   0.004184 |    0.003589 |     0.002568 |   0.004124 |   0.005036 |    0.005975 |
      |  5 |            5 |      0 | 0.00119  |   0.001194 |   0.001256 |    0.001255 |     0.001981 |   0.000749 |   0.002877 |    0.001523 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_xgb_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.675157 |   0.062133 |  -0.093517 |    0.12961  |    -0.040851 |  -0.289735 |  -0.56985  |   -0.222993 |
      |  2 |            2 | 2.20594 | -0.526706 |   0.009479 |  -0.47606  |   -0.204358 |     0.018729 |   0.157345 |  -0.213318 |   -0.022373 |
      |  3 |            3 | 2.20594 |  0.509772 |   0.700983 |   0.035686 |   -0.251212 |     0.071497 |   1.1158   |   0.109486 |    0.423542 |
      |  4 |            4 | 2.20594 |  0.378471 |  -0.074383 |  -0.032628 |    0.133872 |    -0.153245 |  -0.235451 |   0.072893 |    0.198188 |
      |  5 |            5 | 2.20594 | -0.445985 |  -0.110396 |  -0.118909 |    0.179782 |     0.134424 |  -0.038472 |   0.054174 |    0.334684 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013734 |   0.013929 |   0.015019 |    0.014788 |     0.014741 |   0.012818 |   0.012684 |    0.011095 |
      |  2 |            2 |      0 | 0.027093 |   0.029839 |   0.030045 |    0.023152 |     0.02609  |   0.021606 |   0.026735 |    0.030893 |
      |  3 |            3 |      0 | 0.021818 |   0.021139 |   0.024659 |    0.02106  |     0.023295 |   0.01747  |   0.022725 |    0.020437 |
      |  4 |            4 |      0 | 0.010932 |   0.009347 |   0.010853 |    0.009596 |     0.009709 |   0.010285 |   0.010187 |    0.010703 |
      |  5 |            5 |      0 | 0.021477 |   0.021301 |   0.026117 |    0.020262 |     0.021347 |   0.020693 |   0.024354 |    0.021641 |
    ''',
  })
# ---
